fixed off center;

--- a/style/css/index-style.css
+++ b/style/css/index-style.css
@@ -59,7 +59,7 @@
 
         flex: none;
         margin: 30px;
-        width: 95%;
+        width: inherit;
         height: 100%;
         object-fit: scale-down;
         float: left;
